[gd_scene load_steps=8 format=2]

[ext_resource path="res://Control.gd" type="Script" id=1]
[ext_resource path="res://font/Xolonium-Regular.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="InputEventAction" id=6]
action = "ui_select"

[sub_resource type="ShortCut" id=5]
shortcut = SubResource( 6 )

[node name="HUD" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )

[node name="ScoreLabel" type="Label" parent="."]
anchor_right = 1.0
margin_left = 220.0
margin_right = 225.0
margin_bottom = 78.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1

[node name="MessageLabel" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 30.0
margin_top = 260.0
margin_right = 410.0
margin_bottom = 419.0
size_flags_vertical = 5
custom_fonts/font = SubResource( 2 )
text = "Doage the Creeps!"
align = 1
valign = 1
autowrap = true

[node name="StartButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 130.0
margin_top = 560.0
margin_right = 310.0
margin_bottom = 644.0
custom_fonts/font = SubResource( 3 )
shortcut = SubResource( 5 )
text = "Start"

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
